--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-helmet": "^6.1.0",
     "react-owl-carousel": "^2.3.3",
     "react-responsive": "^9.0.0-beta.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
