--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-responsive": "^9.0.0-beta.3",
     "react-router-dom": "^5.2.0",
