--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-responsive": "^9.0.0-beta.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "react-swipeable-views": "^0.14.0",
     "slick-carousel": "^1.8.1",
